--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,19 @@
 				<artifactId>jakarta.persistence-api</artifactId>
 				<version>3.0.0</version>
 			</dependency>
+			<!--Convertir lista de objetos a cadenas JSON -->
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>2.15.2</version>
+			</dependency>
+			<!--Convertir lista de objetos a cadenas JSON2 -->
+			<dependency>
+				<groupId>org.json</groupId>
+				<artifactId>json</artifactId>
+				<version>20230227</version>
+			</dependency>
+
 			<!-- Sanitizar codigo bibliotecas OWASP Sanitizer-->
 			<dependency>
 			<groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
